src/objects/Pipeline_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>X18_Month_Cash_Minus_Expenses_Income_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 18) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 18) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c), 
Expected_Value_Minus_Expense__c , 
( Expected_Value_Minus_Expense__c / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 18 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 19), 
Amount_Minus_Expense_Income__c , 
(18 * Amount_Minus_Expense_Income__c ) / 
( 
(month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Month Cash Minus Expenses Income (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X24_Month_Cash_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 24) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 24) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c), 
Expected_Value__c, 
(Expected_Value__c / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 24 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 25), 
Amount__c, 
(24 * Amount__c) / 
( 
(month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>24 Month Cash (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X24_Month_Cash_Minus_Expense_Income_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 24) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 24) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c), 
Expected_Value_Minus_Expense__c , 
( Expected_Value_Minus_Expense__c / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 24 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 25), 
Amount_Minus_Expense_Income__c , 
(24 * Amount_Minus_Expense_Income__c ) / 
( 
(month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>24 Month Cash Minus Expense Income (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3Month_Cash_Minus_Expense_Income_EV__c</fullName>
        <formula>if(ispickval(Source_Type__c,&apos;Opportunity&apos;), 
IF( (MONTH(CloseDate__c ) + 12*YEAR(CloseDate__c)) &gt; (Month( Month_Date__c ) + 12*YEAR( Month_Date__c ) + 3) 
|| (BLANKVALUE(Duration_months__c,0) = 0) 
|| (CloseDate__c &lt; Month_Date__c), 
0, 
if( (12*YEAR(Month_Date__c)+ MONTH(Month_Date__c) + 3) &gt; (12*YEAR(CloseDate__c)+MONTH(CloseDate__c)+Duration_months__c), 
 Expected_Value_Minus_Expense__c , 
( Expected_Value_Minus_Expense__c  / Duration_months__c) * (MONTH( Month_Date__c) + 12*YEAR( Month_Date__c ) + 3 - MONTH(CloseDate__c) - 12*YEAR(CloseDate__c)))), 


if( (month(Contract_End_Date__c)+12*year(Contract_End_Date__c)) &lt; (month(Month_Date__c)+12*Year(Month_Date__c) + 4), 
 Amount_Minus_Expense_Income__c , 
(3 *  Amount_Minus_Expense_Income__c ) / 
( 
(month(Contract_End_Date__c) + 12*year(Contract_End_Date__c)) - (month(Month_Date__c) + 12*year(Month_Date__c)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3Month Cash Minus Expense Income (EV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Pipeline Snapshot</label>
    <listViews>
        <fullName>Cash_predicted_and_core_run_rate_snaps</fullName>
        <columns>NAME</columns>
        <columns>X12_Month_Cash_Minus_Expense_Income_EV__c</columns>
        <columns>X3Month_Cash_Minus_Expense_Income_EV__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Duration_months__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Cash on Hand,Predicted pipeline,Core run rate</value>
        </filters>
        <filters>
            <field>Month_Date__c</field>
            <operation>equals</operation>
            <value>6/30/2014</value>
        </filters>
        <label>Cash, predicted and core run rate snaps</label>
    </listViews>
    <listViews>
        <fullName>January_Snapshots</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>January Snapshots</label>
    </listViews>
    <listViews>
        <fullName>Last_month_s_closed</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Month_Date__c</columns>
        <columns>Contract__c</columns>
        <columns>Current_Amount__c</columns>
        <columns>Amount__c</columns>
        <columns>Probability__c</columns>
        <columns>Expected_Value__c</columns>
        <columns>Current_Intracompany_Subcontract__c</columns>
        <columns>Intracompany_Sub_contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Month_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:28</value>
        </filters>
        <label>Last month&apos;s closed</label>
    </listViews>
    <listViews>
        <fullName>Last_month_s_outstanding</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Contract__c</columns>
        <columns>Amount__c</columns>
        <columns>Total_Amount_REMAINING__c</columns>
        <columns>Probability__c</columns>
        <columns>Current_Owner_BU__c</columns>
        <columns>Current_Intracompany_Subcontract__c</columns>
        <columns>Intracompany_Sub_contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Month_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Outstanding Contracted</value>
        </filters>
        <label>Last month&apos;s outstanding</label>
    </listViews>
    <listViews>
        <fullName>Last_month_s_snapshots</fullName>
        <columns>NAME</columns>
        <columns>Month_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Source_Type__c</columns>
        <columns>Amount__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Three_Month_EV__c</columns>
        <columns>Twelve_Month_Cash_EV__c</columns>
        <columns>Probability__c</columns>
        <columns>CloseDate__c</columns>
        <columns>Expected_Value__c</columns>
        <columns>Duration_months__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Month_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:28</value>
        </filters>
        <label>Last month&apos;s snapshots</label>
    </listViews>
    <listViews>
        <fullName>Passthrough_to_update</fullName>
        <columns>NAME</columns>
        <columns>Source_Type__c</columns>
        <columns>Month_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Amount_Minus_Expense_Income__c</columns>
        <columns>Contract__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>SBIR,motech,dhis2,screenflow II,SBIR Phase II,gates big proposal</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>technology,scale,business,partners</value>
        </filters>
        <label>Passthrough to update</label>
    </listViews>
    <listViews>
        <fullName>X3Month_12Month_Cash_Flow</fullName>
        <columns>NAME</columns>
        <columns>Month_Date__c</columns>
        <columns>Amount__c</columns>
        <columns>Probability__c</columns>
        <columns>Expected_Value__c</columns>
        <columns>CloseDate__c</columns>
        <columns>Contract_Execution_Date__c</columns>
        <columns>Duration_months__c</columns>
        <columns>Three_Month_EV__c</columns>
        <columns>Twelve_Month_Cash_EV__c</columns>
        <columns>Current_3Month_Cash_EV__c</columns>
        <columns>Current_Twelve_Month_Cash_EV__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Total</value>
        </filters>
        <label>3Month / 12Month Cash Flow</label>
    </listViews>
    <nameField>
        <label>Pipeline Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>